add personal info and pic

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 
   <body>
     <header>
+      <img src="img/mypic.jpg">
+      <p>Сердюкова Ксения Александровна<br>
+        <span>ksunosaur@gmail.com</span><br>
+        <span>+375291216596</span></p>
+
+      <p></p>
       <a href="/"><img src="img/profilepic.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
